--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>백씨네일정</title>
     <style>
         body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #F9FAFB; }
-        /* 구글 배너를 가리는 핵심 코드 */
         iframe {
             width: 100%;
             height: 100%;
             border: none;
-            /* 구글 앱스 스크립트 특유의 여백 제거 */
-            margin-top: -45px; 
-            height: calc(100% + 45px);
+            /* 배너는 가리되 사진은 보이도록 값을 조절했습니다 (-40px) */
+            margin-top: -40px; 
+            height: calc(100% + 40px);
         }
     </style>
 </head>
