--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
             width: 100%;
             height: 100%;
             border: none;
-            /* 배너는 가리되 사진은 보이도록 값을 조절했습니다 (-40px) */
-            margin-top: -40px; 
-            height: calc(100% + 40px);
+            /* 값을 -25px로 조절하여 화면을 조금 더 내렸습니다 */
+            margin-top: -25px; 
+            height: calc(100% + 25px);
         }
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbzpUHKBleBBZNQcz6O6swapEIjKBPHeLGyHhVI2RGXtlM8aGXUemVJlinswrlyfcVtIcA/exec" allow="geolocation; microphone; camera; clipboard-write;"></iframe>
+    <iframe src="본인의_구글_웹_앱_URL" allow="geolocation; microphone; camera; clipboard-write;"></iframe>
 </body>
 </html>
